# constrained_v2

./: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/include/: common.hpp  constrained.hpp  manual.hpp
benchmark/src/: main.cpp
benchmark/src/optional/: bound_check.cpp  non_null.cpp
benchmark/src/throwing/: bound_check.cpp  non_null.cpp
include/constrained/: constrained_type.hpp  convert.hpp
include/constrained/combinators/: all.hpp
include/constrained/optimizer/: all.hpp  optimizer.hpp
include/constrained/optimizer/constraints/: optimize.hpp
include/constrained/optimizer/fail_handlers/: optimize.hpp
include/constrained/optimizer/validators/: optimize.hpp
include/constrained/optimizers/: optimizer.hpp
include/constrained/value_pack/: concat.hpp  contains.hpp  diff.hpp  filter.hpp  fold.hpp  to.hpp  unique.hpp  value_pack.hpp
src/: main.cpp
tests/: CMakeLists.txt  contains.cpp  main.cpp  to.cpp
tests/include/: constrained_type.hpp
tests/optimizer/: optimizer.cpp
tests/src/: constrained_type.cpp  main.cpp
tests/src/optimizer/: constraints.cpp  fail_handlers.cpp  optimizer.cpp  validators.cpp
tests/src/value_pack/: filter.cpp  value_pack.cpp
tests/value_pack/: concat.cpp  diff.cpp  fold.cpp  unique.cpp
